--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 body {
     background-color: rgb(242, 235, 220);
     font-family:'Redaction';
     font-size: 19px;
     line-height: 21px;
-    color:rgb(0, 0, 0)
 }
 
-img{
+img, video{
     width: 100%;
     display:block
 }
@@ -21,12 +26,32 @@ img{
     src:url(fonts/cirruscumulus.woff) format('woff');
 }
 
+/* hero video */
+
+div.herovideo{
+    width:300px;
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+}
+
+div.herovideo video{
+    border-radius: 10px;
+    /* border: 10px dotted rgb(235, 245, 41); */
+}
+
 /* typography */
 
 div.titletext {
-    font-size: 300px;
-    line-height: 300px;
+    font-size: 400px;
+    line-height: 400px;
     font-family: 'CirrusCumulus';
+}
+
+div.titlecaption {
+    font-size:32px;
+    line-height: 32px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 div.largetext {
@@ -37,12 +62,12 @@ div.largetext {
 
 div.mediumtext {
     font-size:28px;
-    line-height: 28px;
+    line-height: 32px;
 }
 
 div.smalltext {
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 20px;
+    line-height: 20px;
 }
 
 div.stretchtext{
@@ -54,12 +79,22 @@ div.textcenter{
     text-align:center;
 }
 
-div.textjustify{
+div.textjustifylast{
     text-align-last:justify;
+}
+
+div.textjustify{
+    text-align:justify;
+    text-align-last: justify;
 }
 
 div.textindent{
     text-indent: 100px;
+}
+
+div.stretchtext{
+    display:inline-block;
+    transform: scaleX(0.7);
 }
 
 /* margins */
@@ -68,16 +103,29 @@ div.mt50 {
     margin-top:50px;
 }
 
+
 div.mt100 {
     margin-top:100px;
+}
+
+div.mt300{
+    margin-top:300px;
 }
 
 div.mb100 {
     margin-bottom:100px;
 }
 
+div.mb300{
+    margin-bottom:300px;
+}
+
 div.ml50{
     margin-left:50px;
+}
+
+div.ml20pc{
+    margin-left:20%;
 }
 
 div.mlauto{
@@ -125,12 +173,30 @@ div.bg-beige {
 }
 
 div.border-yellow {
-    border-radius: 10%;
     overflow: hidden;
-    box-shadow: 10px 15px 5px black;
+    border: 5px dotted rgb(0, 0, 0);
+    padding: 50px
+    /* box-shadow: 10px 15px 5px black; */
 }
 
+
 /* layout */
+
+div.overlay {
+    position: absolute;
+    z-index: 2;
+}
+
+div.fullscreen {
+    width:100vw;
+    height:100vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(242, 235, 220);   
+}
+
 div.width100{
     width:100%;
 }
@@ -145,6 +211,10 @@ div.width60{
 
 div.width40{
     width:40%;
+}
+
+div.width35{
+    width:30%;
 }
 
 div.width20{
@@ -173,7 +243,7 @@ div.alignstart{
 }
 
 div.overlay{
-    position:relative;
+    position:absolute;
 }
 
 div.caption{
@@ -181,3 +251,40 @@ div.caption{
     top: 50%;
     left: 50%;
 }
+
+div.center{
+  margin: auto;
+}
+
+
+/* folio marks */
+
+div.folio{
+    position:fixed;
+    left:20px;
+    top:20px;
+    width:100%;
+    text-align:center;
+}
+
+/* splash screen */
+
+.welcome {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    color: rgb(235, 245, 41);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    cursor: pointer;
+  }
+  
+  .welcome.visible {
+    display: flex;
+    flex-wrap: wrap;
+  }
