--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ div.mt800{
     margin-top:800px;
 }
 
-div.negmt100{
+div.negmt350{
     margin-top:-350px;
 }
 
@@ -283,11 +283,13 @@ div.text-black{
 }
 
 div.swatch{
-    width:300px;
-    height:300px;
-    border-radius:10px;
-    background-color:olive;
-    margin-right:50px;
+    position: sticky;
+    width: 30%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    background-color:rgb(242, 235, 220);
+    z-index: -1;
 }
 
 div.bg-yellow {
@@ -322,10 +324,14 @@ div.border-dotted {
 
 /* layout */
 
-
 div.overlay {
     position: absolute;
     z-index: 2;
+}
+
+div.underlay{
+    position: absolute;
+    z-index: -1;
 }
 
 div.fullscreen-opaque {
@@ -335,7 +341,20 @@ div.fullscreen-opaque {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(242, 235, 220);   
+    background-color: rgb(242, 235, 220);  
+    z-index: 999; 
+}
+
+div.fullscreen-opaque.dark-mode {
+    width:100vw;
+    height:100vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;  
+    color: rgb(242, 235, 220);
+    z-index: 999; 
 }
 
 div.fullscreen {
@@ -432,12 +451,18 @@ div.absolute{
 
 /* folio marks */
 
-div.folio{
+div.folio-df{
     position:fixed;
-    left:20px;
     top:20px;
     width:100%;
-    text-align:center;
+}
+
+div.folio-wif{
+    position:fixed;
+    top: 20px;
+    left: 3%;
+    width: 100%;
+    z-index: -10;
 }
 
 /* splash screen */
@@ -461,22 +486,6 @@ div.folio{
     display: flex;
     flex-wrap: wrap;
   }
-
-/* hover image */
-
-.floating-image {
-    position: fixed;
-    top: 40%;
-    left: 30%;
-    width: 400px;
-    display: none;
-    pointer-events: none ;
-    cursor: pointer;
-  }
-
-.hover-text:hover + .floating-image {
-    display: block;
-}
 
 /* sticky word */
 
@@ -505,6 +514,47 @@ div.sticky-LOF {
     position: sticky;
     top: 3%;
 }
+
+/* humans, humans, things */
+
+.humanshumansthings{
+    position: fixed;
+    display: none;
+}
+
+.humans1{
+    top: 15%;
+    left: 10%;
+}
+
+.humans2{
+    top: 38%;
+    left: 28%;
+}
+
+.things{
+    top: 50%;
+    left: 55%;
+}
+
+
+/****
+abandoned hover image code
+
+.floating-image {
+    position: fixed;
+    top: 40%;
+    left: 30%;
+    width: 400px;
+    display: none;
+    pointer-events: none ;
+    cursor: pointer;
+  }
+
+.hover-text:hover + .floating-image {
+    display: block;
+}
+/****
 
 /* proposal */
 
@@ -540,7 +590,7 @@ div.underline{
     text-decoration: underline;
 }
 
-.hover-video {
+.horsevideo {
     width: 35%;
     height: auto;
   }
