--- a/style.css
+++ b/style.css
@@ -282,16 +282,6 @@ div.text-black{
     color:black;
 }
 
-div.swatch{
-    position: sticky;
-    width: 30%;
-    height: 100px;
-    top: 0;
-    left: 0;
-    background-color:rgb(242, 235, 220);
-    z-index: -1;
-}
-
 div.bg-yellow {
     background-color:rgb(235, 245, 41);
 }
@@ -451,6 +441,26 @@ div.absolute{
 
 /* folio marks */
 
+div.cover-wif{
+    position: sticky;
+    width: 30%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    background-color:rgb(242, 235, 220);
+    z-index: -9;
+}
+
+div.cover-lof{
+    position: sticky;
+    width: 30%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    background-color:rgb(242, 235, 220);
+    z-index: -7;
+}
+
 div.folio-df{
     position:fixed;
     top:20px;
@@ -458,11 +468,20 @@ div.folio-df{
 }
 
 div.folio-wif{
+    position:sticky;
+    top: 20px;
+    left: 3%;
+    width: 100%;
+    z-index: -6;
+    background-color: rgb(242, 235, 220);
+}
+
+div.folio-lof{
     position:fixed;
     top: 20px;
     left: 3%;
     width: 100%;
-    z-index: -10;
+    z-index: -8;
 }
 
 /* splash screen */
