--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ div.herovideo video{
 
 .manifont {
     font-family: 'ManifontGrotesk';
+    /* color:rgb(235, 245, 41); */
 }
 
 div.titletext {
@@ -148,8 +149,7 @@ div.aligncenter{
 
 em{
     font-style:italic;
-    text-decoration: underline;
-    background-color: rgb(235, 245, 41);
+    /* text-decoration: underline; */
 }
 
 span.invis{
@@ -317,7 +317,7 @@ div.border-highlight {
 }
 
 div.border-dotted {
-    border: 10px dotted rgb(235, 245, 41);
+    border: 5px dotted rgb(235, 245, 41);
 }
 
 /* layout */
@@ -359,9 +359,12 @@ div.fullscreen {
     width:100vw;
     height:100vh;
     position: relative;
-    display: flex;
+}
+
+div.fullscreen.center{
     align-items: center;
     justify-content: center;
+    display: flex;
 }
 
 div.vw100{
@@ -523,11 +526,12 @@ div.sticky-LOF {
     top: 3%;
 }
 
-/* humans, humans, things */
+/* image pop ups */
 
-.humanshumansthings{
+.imagepopup{
     position: fixed;
     display: none;
+    z-index: -1;
 }
 
 .humans1{
@@ -540,43 +544,102 @@ div.sticky-LOF {
     left: 28%;
 }
 
-.things{
+.things1{
     top: 50%;
     left: 55%;
 }
 
+.things2{
+    top: 50%;
+    left: 15%;
+    width: 25%;
+}
 
-/****
-abandoned hover image code
+.devices{
+    top: 25%;
+    left: 60%;
+    width: 20%;
+}
 
-.floating-image {
-    position: fixed;
+.buddhahand{
     top: 40%;
-    left: 30%;
-    width: 400px;
+    left: 15%;
+    width: 20%;
+}
+
+.fellowhumans{
+    top: 40%;
+    left: 60%;
+    width: 21%;
+}
+
+.rectangles{
+    top: 20%;
+    left: 35%;
+    width: 30%;
+}
+
+.mannequins{
+    top: 42%;
+    left: 10%;
+    width: 34%;
+}
+
+.philosophersstone{
+    top: 25%;
+    left: 55%;
+    width: 32%;
+}
+
+/* hover image (defunct) */
+
+.underlayphoto{
+    position: fixed;
+    z-index: -1;
     display: none;
     pointer-events: none ;
     cursor: pointer;
-  }
+}
 
-.hover-text:hover + .floating-image {
+.up-flowers{
+    top:25%;
+    left:20%;
+    width: 20%;
+}
+
+.up-mirror{
+    top:20%;
+    left:75%;
+    width: 20%;
+}
+
+.hover-text:hover + .underlayphoto {
     display: block;
 }
-/****
 
 /* proposal */
 
 div.proposaltitle {
     display:inline-block;
-    font-size: 50vw;
-    line-height: 1500px;
+    font-size: 10000px;
     transform: scaleX(0.3);
 }
 
-div.proposalscreen {
+div.proposal-fullscreen{
+    top:5%;
+    left:0;
     width:100vw;
     height:100vh;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    display: none;
 }
+
+div.proposal-fullscreen.show{
+    display: flex;
+}
+   
 
 /* svgs */
 
@@ -602,6 +665,55 @@ div.underline{
     width: 35%;
     height: auto;
   }
+
+.smiley{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 36px;
+    display: none;
+    line-height: 25px;
+    color: rgb(235, 245, 41);
+}
+
+.smiley.show{
+    display: inline-block;
+
+}
+
+.lof{
+    font-size: 109x;
+    margin-left: -.5%;
+    margin-top: 3px;
+}
+
+.lof-a{
+    font-size: 40px;
+    margin-left: -.2%;
+    margin-top: 3px;
+}
+
+.lof-b{
+    font-size: 40px;
+    margin-left: -.2%;
+    margin-top: 3px;
+}
+
+.lof-c{
+    font-size: 40px;
+    margin-left: -.2%;
+    margin-top: 3px;
+}
+
+.lof-d{
+    font-size: 40px;
+    margin-left: -.2%;
+    margin-top: 3px;
+}
+
+.lof-e{
+    font-size: 40px;
+    margin-left: -.2%;
+    margin-top: 3px;
+}
 
 /* debug */
 div.debug{
