--- a/sem2/style.css
+++ b/sem2/style.css
@@ -1,4 +1,4 @@
-/* -------------------- RESET -------------------- */
+-------------------- RESET --------------------
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -48,47 +48,98 @@ table {
     --c-green: #728760;
 	--c-brown: #3b311e;
 	--c-beige: #b4b897;
+
+	--t-extralarge: 13vw;
+	--t-large: 10rem;
+	--t-mediumlarge: 5rem;
+	--t-medium: 3rem;
 }
 
 body {
 	line-height: 1; /* for reset */
 	background-color: var(--c-green);
 	color: var(--c-brown);
-	padding: 2rem;
+	/* padding: 2rem; */
+}
+
+img, video{
+    width: 100%;
+    display: block;
 }
 
 /* text */
 
+	/* txt-size */
+
+.text--extralarge{
+	font-size: var(--t-extralarge);
+}
+
 .text--large{
-	font-size: 10rem;
+	font-size: var(--t-large);
 	line-height: 8rem;
 }
 
 .text--mediumlarge{
-	font-size: 5rem;
+	font-size: var(--t-mediumlarge);
 }
 
 .text--medium{
-	font-size: 3rem;
+	font-size: var(--t-medium);
 }
 
 .text--body{
 	font-size: 1.3rem;
+	line-height: 1.4rem;
+}
+
+	/* txt-formatting */
+
+span.text--indent{
 	text-indent: 50px;
+	display:inline-block; /* to make work inline */
+}
+
+div.text--indent{
+	text-indent: 50px;
+}
+
+div.text--justify{
+	text-align: justify;
+	text-justify: auto;
+	text-align-last: justify;
+}
+
+div.text--centrealign{
+	text-align: center;
+}
+
+	/* txt-colour */
+
+.text--green{
+	color: var(--c-green);
+}
+
+.text--brown{
+	color: var(--c-brown);
+}
+
+.text--beige{
+	color: var(--c-beige);
 }
 
 
 /* colours */
 
-div.bg-green{
+div.bg--green{
 	background-color: var(--c-green);
 }
 
-div.bg-brown{
+div.bg--brown{
 	background-color: var(--c-brown)
 }
 
-div.bg-beige{
+div.bg--beige{
 	background-color: var(--c-beige)
 }
 
@@ -105,9 +156,23 @@ div.border{
 
 /* layout */
 
+.fullscreen{
+	width: 100vw;
+	height: 100vh;
+}
+
+.full--viewheight{
+	height: 100vh;
+}
+
 .flex{
 	display: flex;
 	flex-wrap: wrap;
+}
+
+.flex--centre{
+	justify-content: center;
+	align-items: center;
 }
 
 .flex--rowgap{
@@ -118,21 +183,335 @@ div.border{
 	column-gap: 1rem;
 }
 
-.flex__item--width25{
+.z--2{
+	z-index: 2;
+}
+
+.z--1{
+	z-index: 1;
+}
+
+.z--0{
+	z-index: 0;
+}
+
+.z--neg1{
+	z-index: -1;
+}
+
+	/* layout-position */
+
+.position--relative{
+	position:relative;
+}	
+
+.position--absolute{
+	position: absolute;
+}
+
+.position--absolute--centred{
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.position--sticky{
+	position: sticky;
+}
+
+.position--top0{
+	top: 0;
+}
+
+/* margins */
+
+	/* marg-top  */
+
+.mt--neg400px{
+	margin-top: -400px
+}
+
+.mt--neg500px{
+	margin-top: -500px;
+}
+
+.mt--neg600px{
+	margin-top: -600px
+}
+
+.mt--neg700px{
+	margin-top: -700px
+}
+
+.mt--10px{
+	margin-top: 10px;
+}
+
+.mt--20px{
+	margin-top: 20px;
+}
+
+.mt--30px{
+	margin-top: 30px;
+}
+
+.mt--50px{
+	margin-top: 50px;
+}
+
+.mt--100px{
+	margin-top: 100px;
+}
+
+.mt--200px{
+	margin-top: 200px;
+}
+
+.mt--250px{
+	margin-top: 250px;
+}
+
+.mt--300px{
+	margin-top: 300px;
+}
+
+.mt--400px{
+	margin-top: 400px;
+}
+
+.mt--500px{
+	margin-top: 500px;
+}
+
+.mt--600px{
+	margin-top: 600px;
+}
+
+.mt--700px{
+	margin-top: 700px;
+}
+
+.mt--800px{
+	margin-top: 800px;
+}
+
+	/* marg-left */
+
+.ml--5pc{
+	margin-left: 5%;
+}
+
+.ml--10pc{
+	margin-left: 10%;
+}
+
+.ml--15pc{
+	margin-left: 15%;
+}
+
+.ml--20pc{
+	margin-left: 20%;
+}
+
+.ml--25pc{
+	margin-left: 25%;
+}
+
+.ml--30pc{
+	margin-left: 30%;
+}
+
+
+.ml--40pc{
+	margin-left: 40%;
+}
+
+
+.ml--50pc{
+	margin-left: 50%;
+}
+
+.ml--60pc{
+	margin-left: 60%;
+}
+
+.ml--35px{
+	margin-left: 35px;
+}
+
+	/* marg-bottom */
+
+.mb--200px{
+	margin-bottom: 200px;
+}
+
+.mb--300px{
+	margin-bottom: 300px;
+}
+
+.mb--400px{
+	margin-bottom: 400px;
+}
+
+.m--centre{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* padding */
+
+.padding--4remnobottom{
+	padding-top: 4rem;
+	padding-left: 4rem;
+	padding-right: 4rem;
+}
+
+.pt--50px{
+	padding-top: 200px;
+}
+
+.pt--150px{
+	padding-top: 150px;
+}
+
+.pt--200px{
+	padding-top: 200px;
+}
+
+.pt--300px{
+	padding-top: 300px;
+}
+
+.pb--50px{
+	padding-bottom: 50px;
+}
+
+.pb--100px{
+	padding-bottom: 100px;
+}
+
+.pb--200px{
+	padding-bottom: 200px;
+}
+
+/* widths */
+
+div.width--5pc{
+	width: 5%;
+}
+
+div.width--10pc{
+	width: 10%;
+}
+
+div.width--16pc{
+	width: 16%;
+}
+
+div.width--18pc{
+	width: 18%;
+}
+
+div.width--20pc{
+	width: 20%;
+}
+
+div.width--25pc{
 	width: 25%;
 }
 
-.flex__item--width75{
+div.width--30pc{
+	width: 30%;
+}
+
+div.width--50pc{
+	width: 50%;
+}
+
+div.width--60pc{
+	width: 60%;
+}
+
+div.width--75pc{
 	width: 75%;
 }
 
+/* images */
 
+div.overflowhidden{
+	overflow: hidden;
+}
+
+div.planetposition{
+	top: 20%;
+	left: 10%;
+	z-index: -1;
+}
+
+div.starsposition{
+	top: 50%;
+	left: 60%;
+	z-index: -1;
+}
+
+div.dreamplanettextposition{
+	top: 10%;
+	left: 15%;
+}
+
+div.blendingmode--multiply{
+	mix-blend-mode: multiply;
+}
 
 /* grid */
 
-/* .grid{
+.grid{
 	display: grid;
+}
+
+.grid--5col{
 	grid-template-rows: 300px;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 1rem;
-} */
+	grid-template-columns: repeat(5, 1fr);
+}
+
+/* mask */
+
+.binocularmask {
+	top: 0;
+	position: sticky;
+	-webkit-mask-image: url(images/binoculars.png);
+	mask-image: url(images/binoculars.png);
+	mask-size: 90%;
+	mask-repeat: no-repeat;
+	mask-position: center;
+	mask-size: cover;
+}
+
+/* effects */
+
+.floating {
+	position: relative;
+	animation: float 4.5s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translateY(0);
+	}
+
+	50% {
+		transform: translateY(-15px);
+	}
+
+	100% {
+		transform: translateY(0);
+	}
+}
+
+
+/* debug */
+.debug{
+	border-style: solid;
+	border-color: red;
+	border-width: 1px;
+}
